# atlast-ecp

./: .coverage  .gitignore  ARCHITECTURE.md  CERTIFICATE-SCHEMA.md  CHANGELOG.md  CONTRIBUTING.md  ECP-SERVER-SPEC.md  ECP-SPEC.md  INTERFACE-CONTRACT.md  LICENSE  P2-DEVELOPMENT-PLAN.md  PHASE-V17-PLAN.md  PHASE6-PLAN.md  PHASE6-REMAINING.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  X-THREAD-LAUNCH.md  e2e_test.py  join.md  production_test.py  production_test_v2.py  stress_test.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  railway.toml  requirements.txt
dashboard/: app.js  index.html  style.css
docs/: A2A-VERIFICATION.md  C6-24H-MONITOR-REPORT.json  CRITICAL-FIX-PLAN.md  DASHBOARD-TEST-GUIDE.md  DISCOVERY.md  INTEGRATION-GUIDE.md  PRE-LAUNCH-PLAN.md  anti-abuse-framework.md  api-reference.md  deployment-guide.md  hmac-failclosed-plan.md  ietf-evaluation.md  migration-0.7-to-0.8.md  platform-integration.md  super-batch.md  w3c-mapping.md
examples/: README.md  autogen_demo.py  crewai_demo.py  langchain_demo.py
experiments/: 01_wrap_coding.py  02_langchain_research.py  03_track_customer.py  04_crewai_team.py  05_autogen_debate.py  06_chaos_errors.py  README.md  cross_sdk_test.py  run_all.py  stability_test_24h.py
onboarding/: index.html
scripts/: atlast-scan.sh  monitor_24h.py
sdk/: pyproject.toml
sdk/.ecp/: identity.json  index.json
sdk/atlast_ecp/: __init__.py  a2a.py  auto.py  batch.py  cli.py  config.py  identity.py  insights.py  mcp_server.py  openclaw_scanner.py  proxy.py  record.py  verify.py
sdk/go/: README.md  batch.go  batch_test.go  go.mod  record.go  record_test.go  storage_test.go  types.go  verify.go  verify_test.go
sdk/go/cmd/atlast/: main.go
sdk/go/cmd/atlast-go/: main.go
sdk/python/: .coverage  README.md  pyproject.toml
sdk/python/atlast_ecp/: TROUBLESHOOT.md  __init__.py  __main__.py  _claude_stop_hook_template.py  a2a.py  auto.py  batch.py  cli.py  clustering.py  config.py  core.py  dashboard_server.py  demo_data.py  embeddings.py  evaluation.py  flush.py  html_export.py  identity.py  incidents.py  insights.py  mcp_server.py  openclaw_scanner.py  otel_exporter.py  proof.py  proxy.py  query.py  record.py  recovery.py  scanner_service.py  scoring_rules.py  signals.py  storage.py  transcript_scanner.py  vault_backup.py  verify.py  webhook.py  wire.py  wrap.py
sdk/python/atlast_ecp/adapters/: README.md  __init__.py  autogen.py  crewai.py  langchain.py
sdk/python/atlast_ecp/dashboard_assets/: index.html
sdk/python/integrations/claude_code/: ecp_hooks.py  install.py
sdk/python/integrations/openclaw/: plugin.py
sdk/python/tests/: conftest.py  run_all.sh  test_adapters.py  test_advanced_modules.py  test_auto_coverage.py  test_batch_coverage.py  test_batch_upload.py  test_certificate.py  test_claude_code.py  test_cli.py  test_cli_coverage.py  test_config_coverage.py  test_config_storage.py  test_core.py  test_dashboard_and_mcp.py  test_delegation.py  test_identity_coverage.py  test_insights.py  test_integration.py  test_library_mode.py  test_mcp_coverage.py  test_mcp_server.py  test_minimal.py  test_openclaw.py  test_openclaw_coverage.py  test_otel.py  test_provenance.py  test_proxy.py  test_proxy_coverage.py  test_proxy_coverage2.py  test_proxy_integration.py  test_proxy_vault_v2.py  test_query.py  test_recovery.py  test_retry.py  test_scoring_rules.py  test_storage_coverage.py  test_v060_deep.py  test_vault_backup.py  test_verify.py  (+3 more)
sdk/tests/: test_a2a.py  test_certificate.py  test_claude_code.py  test_cli.py  test_e2e_full.py  test_integration.py  test_proxy.py  test_verify.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: batch.ts  crypto.ts  identity.ts  index.ts  record.ts  track.ts  types.ts  wrap.ts
sdk/typescript/tests/: batch.test.ts  crypto.test.ts  delegation.test.ts  identity.test.ts  record.test.ts  track.test.ts  wrap.test.ts
(+128 files in other folders)
